--- a/preamble.tex
+++ b/preamble.tex
@@ -13,7 +13,9 @@
 \usepackage{amsmath}
 \usepackage{array}
 \usepackage{booktabs}
-\usepackage[most]{tcolorbox}
+
+\usepackage{mdframed}
+\definecolor{framebackground}{gray}{0.9}
 
 % change chapter style
 \usepackage{titlesec, blindtext, color}
@@ -72,11 +74,9 @@
         \textcolor[RGB]{180, 180, 180}{\rule{\textwidth}{1pt}}
         \vspace{.25cm}
 }
-\newtcolorbox{thesisframe}[1][]{
-  enhanced,
-  arc=0pt,
-  outer arc=0pt,
-  colback=white,
-  boxrule=0.8pt,
-  #1
-}
+
+\newenvironment{absolutelynopagebreak}
+  {\par\nobreak\vfil\penalty0\vfilneg
+   \vtop\bgroup}
+  {\par\xdef\tpd{\the\prevdepth}\egroup
+   \prevdepth=\tpd}
